--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "Cerad\\Common\\": "cerad-common/"
         }
     },
     "autoload-dev": {
