--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,2 +1,6 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
+    paths:
+        'src/Shoe':      Shoe
+        'src/ShoeStore': ShoeStore
+
